--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -952,6 +952,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_group_stickers_add" = "Choose sticker set";
 
 "lng_switch_stickers" = "Stickers";
+"lng_switch_prices" = "Prices";
 "lng_switch_emoji" = "Emoji";
 "lng_switch_gifs" = "GIFs";
 "lng_stickers_featured_add" = "Add";
