--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -1109,6 +1109,8 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_context_view_feed_info" = "View feed info";
 "lng_context_pin_to_top" = "Pin to top";
 "lng_context_unpin_from_top" = "Unpin from top";
+"lng_context_add_to_favorites" = "Add to favorites";
+"lng_context_remove_from_favorites" = "Remove from favorites";
 "lng_context_mark_unread" = "Mark as unread";
 "lng_context_mark_read" = "Mark as read";
 
