Draw table header at PricesListWidget

--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -958,6 +958,9 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_prices_customize_list" = "Customize List";
 "lng_prices_site_name" = "LIVE COIN WATCH";
 "lng_prices_market_cap" = "Market Cap: $%1";
+"lng_prices_header_coin" = "Coin";
+"lng_prices_header_price" = "Price";
+"lng_prices_header_24h" = "24h";
 
 "lng_switch_stickers" = "Stickers";
 "lng_switch_prices" = "Prices";
