--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -955,7 +955,9 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_group_stickers_description" = "You can choose a sticker set which will be available for every member while in the group chat.";
 "lng_group_stickers_add" = "Choose sticker set";
 
+// Now we do not use lng_prices_customize_list
 "lng_prices_customize_list" = "Customize List";
+"lng_prices_upgrade_now" = "Upgrade Now";
 "lng_prices_site_name" = "LIVE COIN WATCH";
 "lng_prices_market_cap" = "Market Cap: $%1";
 "lng_prices_header_coin" = "Coin";
