Change 'Upgrade Now' text to 'Visit the Site'

--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -957,7 +957,9 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 
 // Now we do not use lng_prices_customize_list
 "lng_prices_customize_list" = "Customize List";
+// Now we do not use lng_prices_upgrade_now
 "lng_prices_upgrade_now" = "Upgrade Now";
+"lng_prices_footer" = "Visit the Site";
 "lng_prices_site_name" = "LIVE COIN WATCH";
 "lng_prices_market_cap" = "Market Cap: $%1";
 "lng_prices_header_coin" = "Coin";
